tests/invalid_syn/syn03.java
class Main {
    static void run() {
        hello(;
        int b;
    }
    static void hello() {
        int c;
    }
}
